tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors3.errors.txt
tests/cases/compiler/fatarrowfunctionsOptionalArgsErrors3.ts(1,5): error TS1003: Identifier expected.


==== tests/cases/compiler/fatarrowfunctionsOptionalArgsErrors3.ts (1 errors) ====
    (...) => 105;
        ~
!!! error TS1003: Identifier expected.
    